@@ -48,6 +48,8 @@ VERSION 1.2.2 (??? ?? ??:?? 2005)
   delete
 - Expanded on default (no args) and help messages
 - Added show_latest_snapshot() subroutine for shell scripts
+- Fixed sync_if_different() to allow alternating directories and files to be
+  created with the same names between runs
 
 VERSION 1.2.1 (Apr 09 15:10 2005)
 ------------------------------------------------------------------------------
